attributeが動くようになったけど、methods!マクロ内の変数と実定義の変数がズレてしまう問題が残っている

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 version: '3'
 services:
-  rutie-derive:
+  rutie-attr:
     build:
       context: .
+    volumes:
+      - .:/app
+  so_dec:
+    build:
+      context: .
+      dockerfile: Dockerfile.decompile
     volumes:
       - .:/app
