--- a/rutie-attr/Cargo.toml
+++ b/rutie-attr/Cargo.toml
@@ -15,3 +15,6 @@ rutie = "0.8.2"
 quote = "1.0"
 proc-macro2 = "1.0"
 syn = { version = "1.0", features = ["full", "extra-traits"] }
+itertools = "0.10.0"
+once_cell = "1.7"
+rutie_attr_backend = { path = "../rutie-attr-backend" }
